# project_game

./: README.md
map/: Village 1 Mountains.tsx  castle.tmx  ship_boarding.tmx  test.tmx
map/character/: everyGBAbattlesprite.tsx  fire-emblem-blue-overworld-sprites.tsx
map/ground/FE 8/: Overworld Dark Green.tsx
map/ground/Immortal Sword/: FE7xTr2.tsx  arrival_castle.tmx
map/ground/Village/: Village 1 Mountains.tsx  Village 1 ShipInside.tsx
map/tile_mapping/arrival_castle/: Overworld Dark Green.tsx  arrival_castle.tmx
map/tile_mapping/castle/: FE7xTr2.tsx  castle.csv  castle.tmx
map/tile_mapping/main_road_forest_bridge/: Village 1 Mountains.tsx  main_road_forest_bridge.csv  main_road_forest_bridge.tmx
music/working/: begining_sea.m4a  end_sea.m4a  sea.m4a  stage1.m4a
src/: CMakeLists.txt  castlestate.cpp  castlestate.h  character.h  components.h  deadstate.cpp  deadstate.h  ecs.h  endstate.cpp  endstate.h  foreststate.cpp  foreststate.h  game.cpp  game.h  gameobject.cpp  gameobject.h  gamestate.h  global.h  instructionstate.cpp  instructionstate.h  introstate.cpp  introstate.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  menustate.cpp  menustate.h  mountainstate.cpp  mountainstate.h  optionstate.cpp  optionstate.h  seastate.cpp  seastate.h  seatownstate.cpp  seatownstate.h  stack.h  stage1state.cpp  stage1state.cpp.autosave  (+3 more)
src_dvlp/: character.cpp  character.h
story/: script_1-intro.txt  script_1_Intro.txt  script_2-Stage1.txt  script_3-Forest.txt  script_4-seatown.txt  script_5-Mountain.txt  script_6-sea.txt  script_7-Castle.txt
(+6 files in other folders)
